Updated styles and contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>Contato</title>
+  </head>
 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>Contato</title>
-</head>
-
-<body>
-  <header>
-    <div class="menu-btn">
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-    </div>
-
-    <nav class="menu">
-      <div class="menu-branding">
-        <div class="portrait"></div>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
       </div>
-      <ul class="menu-nav">
-        <li class="nav-item">
-          <a href="index.html" class="nav-link">
-            Início
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            Sobre
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="work.html" class="nav-link">
-            Portfólio
-          </a>
-        </li>
-        <li class="nav-item current">
-          <a href="contact.html" class="nav-link">
-            Contato
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
 
-  <main id="contact">
-    <h1 class="lg-heading">
-      Para mais
-      <span class="text-secondary">Informações</span>
-    </h1>
-    <h2 class="sm-heading">
-      Os meios para falar comigo são...
-    </h2>
-    <div class="boxes">
-      <div>
-        <span class="text-secondary">Email: </span> guilherme.ramos09@gmail.com
+      <nav class="menu">
+        <div class="menu-branding">
+          <div class="portrait"></div>
+        </div>
+        <ul class="menu-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">
+              Início
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link">
+              Sobre
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link">
+              Portfólio
+            </a>
+          </li>
+          <li class="nav-item current">
+            <a href="contact.html" class="nav-link">
+              Contato
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main id="contact">
+      <h1 class="lg-heading">
+        Para mais
+        <span class="text-secondary">Informações</span>
+      </h1>
+      <h2 class="sm-heading">
+        Email, telefone e cidade...
+      </h2>
+      <div class="boxes">
+        <div>
+          <span class="text-secondary">Email: </span>
+          guilherme.ramos09@gmail.com
+        </div>
+        <div>
+          <span class="text-secondary">Telefone: </span> (14) 99663-6790
+        </div>
+        <div><span class="text-secondary">Cidade: </span> Marília-SP</div>
       </div>
-      <div>
-        <span class="text-secondary">Phone: </span> (14) 99663-6790
-      </div>
-      <div>
-        <span class="text-secondary">Cidade: </span> Marília-SP
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <footer id="main-footer">
-    Copyright &copy; 2019
-  </footer>
+    <footer id="main-footer">
+      Copyright &copy; 2019
+    </footer>
 
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/main.js"></script>
+  </body>
 </html>
