--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,10 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Contato</title>
   </head>
-
   <body>
     <header>
       <div class="menu-btn">
@@ -23,44 +21,29 @@
         <div class="btn-line"></div>
         <div class="btn-line"></div>
       </div>
-
       <nav class="menu">
-        <div class="menu-branding">
-          <div class="portrait"></div>
-        </div>
+        <div class="menu-branding"><div class="portrait"></div></div>
         <ul class="menu-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link">
-              Início
-            </a>
+            <a href="index.html" class="nav-link"> Início </a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">
-              Sobre
-            </a>
+            <a href="about.html" class="nav-link"> Sobre </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
-              Portfólio
-            </a>
+            <a href="work.html" class="nav-link"> Portfólio </a>
           </li>
           <li class="nav-item current">
-            <a href="contact.html" class="nav-link">
-              Contato
-            </a>
+            <a href="contact.html" class="nav-link"> Contato </a>
           </li>
         </ul>
       </nav>
     </header>
-
     <main id="contact">
       <h1 class="lg-heading">
-        Para mais
-        <span class="text-secondary">Informações</span>
+        Para mais <span class="text-secondary">Informações</span>
       </h1>
-      <h2 class="sm-heading">
-        Email, telefone e cidade...
-      </h2>
+      <h2 class="sm-heading">Email, telefone e cidade...</h2>
       <div class="boxes">
         <div>
           <span class="text-secondary">Email: </span>
@@ -72,11 +55,7 @@
         <div><span class="text-secondary">Cidade: </span> Marília-SP</div>
       </div>
     </main>
-
-    <footer id="main-footer">
-      Copyright &copy; 2019
-    </footer>
-
+    <footer id="main-footer">Copyright &copy; 2019</footer>
     <script src="js/main.js"></script>
   </body>
 </html>
