--- a/index.html
+++ b/index.html
@@ -1,80 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
-
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <title>Bem Vindo ao meu Portfólio</title>
-</head>
-
-<body id="bg-img">
-  <header>
-    <div class="menu-btn">
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-      <div class="btn-line"></div>
-    </div>
-
-    <nav class="menu">
-      <div class="menu-branding">
-        <div class="portrait"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>Bem Vindo ao meu Portfólio</title>
+  </head>
+  <body id="bg-img">
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
       </div>
-      <ul class="menu-nav">
-        <li class="nav-item current">
-          <a href="index.html" class="nav-link">
-            Início
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="about.html" class="nav-link">
-            Sobre
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="work.html" class="nav-link">
-            Portfólio
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">
-            Contato
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="home">
-    <h1 class="lg-heading">
-      Guilherme
-      <span class="text-secondary">Ramos</span>
-    </h1>
-    <h2 class="sm-heading">
-      Web Developer, Student
-    </h2>
-    <div class="icons">
-<!--       <a href="#!">
-        <i class="fab fa-twitter fa-2x"></i>
-      </a>
-      <a href="#!">
-        <i class="fab fa-facebook fa-2x"></i>
-      </a> -->
-      <a href="https://www.linkedin.com/in/guilherme-ramos09/" target="_blank">
-        <i class="fab fa-linkedin fa-2x"></i>
-      </a>
-      <a href="https://github.com/guilherme-ro" target="_blank">
-        <i class="fab fa-github fa-2x"></i>
-      </a>
-    </div>
-  </main>
-
-  <script src="js/main.js"></script>
-</body>
-
+      <nav class="menu">
+        <div class="menu-branding"><div class="portrait"></div></div>
+        <ul class="menu-nav">
+          <li class="nav-item current">
+            <a href="index.html" class="nav-link"> Início </a>
+          </li>
+          <li class="nav-item">
+            <a href="about.html" class="nav-link"> Sobre </a>
+          </li>
+          <li class="nav-item">
+            <a href="work.html" class="nav-link"> Portfólio </a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link"> Contato </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main id="home">
+      <h1 class="lg-heading">
+        Guilherme <span class="text-secondary">Ramos</span>
+      </h1>
+      <h2 class="sm-heading">Web Developer, Student</h2>
+      <div class="icons">
+        <!-- <a href="#!"> <i class="fab fa-twitter fa-2x"></i> </a> <a href="#!"> <i class="fab fa-facebook fa-2x"></i> </a> -->
+        <a
+          href="https://www.linkedin.com/in/guilherme-ramos09/"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a href="https://github.com/guilherme-ro" target="_blank">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+      </div>
+    </main>
+    <script src="js/main.js"></script>
+  </body>
 </html>
