Updated Portfolio Page

--- a/work.html
+++ b/work.html
@@ -65,13 +65,13 @@
             <img src="img/projects/project1.png" alt="Project" />
           </a>
           <a
-            href="https://guilherme-edgeledger.netlify.com/"
+            href="https://github.com/guilherme-ro/proj_laravel"
             target="_blank"
             class="btn-light"
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Layout CSS com Flexbox</p>
+          <p class="btn-dark">PHP - Laravel - Site responsivo em Bootstrap</p>
         </div>
         <div class="item">
           <a href="#!">
@@ -124,6 +124,19 @@
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
           <p class="btn-dark">Site Responsivo com Bootstrap 4</p>
+        </div>
+        <div class="item">
+          <a href="#!">
+            <img src="img/projects/project6.png" alt="Project" />
+          </a>
+          <a
+            href="https://guilherme-edgeledger.netlify.com/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark">Layout CSS com Flexbox</p>
         </div>
       </div>
     </main>
