--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
       </h2>
       <div class="projects">
         <div class="item">
-          <a href="#!">
+          <a href="#">
             <img src="img/projects/project3.png" alt="Project" />
           </a>
           <a
@@ -74,7 +74,7 @@
           <p class="btn-dark">Componentes React</p>
         </div>
         <div class="item">
-          <a href="#!">
+          <a href="#">
             <img src="img/projects/project1.png" alt="Project" />
           </a>
           <a
@@ -87,7 +87,49 @@
           <p class="btn-dark">PHP - Laravel - Site responsivo em Bootstrap</p>
         </div>
         <div class="item">
-          <a href="#!">
+          <a href="#">
+            <img src="img/projects/decore-persianas-ny.png" alt="Project" />
+          </a>
+          <a
+            href="https://www.decorecompapel.com.br/persianas-new-york"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark">Vtex - Persianas New York - Página Institucional</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/dona-lolla.png" alt="Project" />
+          </a>
+          <a
+            href="https://www.donalolla.com/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark">Nuvemshop - Dona Lolla</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/bix-fashion-kids.png" alt="Project" />
+          </a>
+          <a
+            href="https://www.bixfashionkids.com.br/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark">Nuvemshop - Bix Fashion Kids</p>
+        </div>
+
+
+
+        <div class="item">
+          <a href="#">
             <img src="img/projects/project2.png" alt="Project" />
           </a>
           <a
@@ -100,7 +142,7 @@
           <p class="btn-dark">Layout CSS com Grid</p>
         </div>
         <div class="item">
-          <a href="#!">
+          <a href="#">
             <img src="img/projects/project4.png" alt="Project" />
           </a>
           <a
@@ -113,7 +155,7 @@
           <p class="btn-dark">CRUD em Rails</p>
         </div>
         <div class="item">
-          <a href="#!">
+          <a href="#">
             <img src="img/projects/project5.png" alt="Project" />
           </a>
           <a
@@ -126,7 +168,7 @@
           <p class="btn-dark">Site Responsivo com Bootstrap 4</p>
         </div>
         <div class="item">
-          <a href="#!">
+          <a href="#">
             <img src="img/projects/project6.png" alt="Project" />
           </a>
           <a
