--- a/work.html
+++ b/work.html
@@ -97,7 +97,7 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Vtex - Persianas New York - Página Institucional</p>
+          <p class="btn-dark">VTEX - Persianas New York - Página Institucional</p>
         </div>
         <div class="item">
           <a href="#">
@@ -110,7 +110,7 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Nuvemshop - Dona Lolla</p>
+          <p class="btn-dark">Nuvemshop - Dona Lolla - Loja E-commerce</p>
         </div>
         <div class="item">
           <a href="#">
@@ -123,7 +123,20 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Nuvemshop - Bix Fashion Kids</p>
+          <p class="btn-dark">Nuvemshop - Bix Fashion Kids - Loja E-commerce</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/fran-nuvemshop.png" alt="Project" />
+          </a>
+          <a
+            href="https://guilherme-ro.github.io/videos/fran_desktop.mp4"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark">Nuvemshop - Fran - art & decor - Loja E-commerce</p>
         </div>
 
 
