fran art e decor modificacao 01

--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
             <img src="img/projects/fran-nuvemshop.png" alt="Project" />
           </a>
           <a
-            href="https://guilherme-ro.github.io/videos/fran_desktop.mp4"
+            href="videos/fran_desktop.mp4"
             target="_blank"
             class="btn-light"
           >
