fran art e decor modificacao 02

--- a/work.html
+++ b/work.html
@@ -71,20 +71,7 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Componentes React</p>
-        </div>
-        <div class="item">
-          <a href="#">
-            <img src="img/projects/project1.png" alt="Project" />
-          </a>
-          <a
-            href="https://github.com/guilherme-ro/proj_laravel"
-            target="_blank"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Link para o Projeto
-          </a>
-          <p class="btn-dark">PHP - Laravel - Site responsivo em Bootstrap</p>
+          <p class="btn-dark project-desc">Componentes React</p>
         </div>
         <div class="item">
           <a href="#">
@@ -97,7 +84,7 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">VTEX - Persianas New York - Página Institucional</p>
+          <p class="btn-dark project-desc">VTEX - Persianas New York - Página Institucional</p>
         </div>
         <div class="item">
           <a href="#">
@@ -110,7 +97,7 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Nuvemshop - Dona Lolla - Loja E-commerce</p>
+          <p class="btn-dark project-desc">Nuvemshop - Dona Lolla - Loja E-commerce</p>
         </div>
         <div class="item">
           <a href="#">
@@ -123,25 +110,47 @@
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Nuvemshop - Bix Fashion Kids - Loja E-commerce</p>
+          <p class="btn-dark project-desc">Nuvemshop - Bix Fashion Kids - Loja E-commerce</p>
         </div>
         <div class="item">
           <a href="#">
             <img src="img/projects/fran-nuvemshop.png" alt="Project" />
           </a>
-          <a
+          <div class="link-projects d-flex justify-content-between">
+            <a
             href="videos/fran_desktop.mp4"
+            target="_blank"
+            class="btn-light mb-0"
+          >
+            <i class="fas fa-eye"></i> Vídeo do Site Desktop
+          </a>
+          <a
+          href="videos/fran_mobile.mp4"
+          target="_blank"
+          class="btn-light mb-0"
+        >
+          <i class="fas fa-eye"></i> Vídeo do Site Mobile
+        </a>
+          </div>
+          <p class="btn-dark project-desc">Nuvemshop - Fran - art & decor - Loja E-commerce</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/project1.png" alt="Project" />
+          </a>
+          <a
+            href="https://github.com/guilherme-ro/proj_laravel"
             target="_blank"
             class="btn-light"
           >
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
-          <p class="btn-dark">Nuvemshop - Fran - art & decor - Loja E-commerce</p>
+          <p class="btn-dark project-desc">PHP - Laravel - Site responsivo em Bootstrap</p>
         </div>
 
 
 
-        <div class="item">
+        <!-- <div class="item">
           <a href="#">
             <img src="img/projects/project2.png" alt="Project" />
           </a>
@@ -153,7 +162,7 @@
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
           <p class="btn-dark">Layout CSS com Grid</p>
-        </div>
+        </div> -->
         <div class="item">
           <a href="#">
             <img src="img/projects/project4.png" alt="Project" />
@@ -167,7 +176,7 @@
           </a>
           <p class="btn-dark">CRUD em Rails</p>
         </div>
-        <div class="item">
+        <!-- <div class="item">
           <a href="#">
             <img src="img/projects/project5.png" alt="Project" />
           </a>
@@ -179,7 +188,7 @@
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
           <p class="btn-dark">Site Responsivo com Bootstrap 4</p>
-        </div>
+        </div> -->
         <div class="item">
           <a href="#">
             <img src="img/projects/project6.png" alt="Project" />
@@ -197,7 +206,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy; 2019
+      Copyright &copy; 2020
     </footer>
 
     <script src="js/main.js"></script>
