fran art e decor modificacao 03

--- a/work.html
+++ b/work.html
@@ -116,7 +116,7 @@
           <a href="#">
             <img src="img/projects/fran-nuvemshop.png" alt="Project" />
           </a>
-          <div class="link-projects d-flex justify-content-between">
+          <div class="link-projects">
             <a
             href="videos/fran_desktop.mp4"
             target="_blank"
