fran art e decor modificacao 03

--- a/work.html
+++ b/work.html
@@ -120,14 +120,14 @@
             <a
             href="videos/fran_desktop.mp4"
             target="_blank"
-            class="btn-light mb-0"
+            class="btn-light"
           >
             <i class="fas fa-eye"></i> Vídeo do Site Desktop
           </a>
           <a
           href="videos/fran_mobile.mp4"
           target="_blank"
-          class="btn-light mb-0"
+          class="btn-light"
         >
           <i class="fas fa-eye"></i> Vídeo do Site Mobile
         </a>
