fran art e decor modificacao 04

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
             target="_blank"
             class="btn-light"
           >
-            <i class="fas fa-eye"></i> Link para o Projeto
+            <i class="fas fa-eye"></i> Link para o Site
           </a>
           <p class="btn-dark project-desc">VTEX - Persianas New York - Página Institucional</p>
         </div>
@@ -95,7 +95,7 @@
             target="_blank"
             class="btn-light"
           >
-            <i class="fas fa-eye"></i> Link para o Projeto
+            <i class="fas fa-eye"></i> Link para o Site
           </a>
           <p class="btn-dark project-desc">Nuvemshop - Dona Lolla - Loja E-commerce</p>
         </div>
@@ -108,7 +108,7 @@
             target="_blank"
             class="btn-light"
           >
-            <i class="fas fa-eye"></i> Link para o Projeto
+            <i class="fas fa-eye"></i> Link para o Site
           </a>
           <p class="btn-dark project-desc">Nuvemshop - Bix Fashion Kids - Loja E-commerce</p>
         </div>
@@ -133,6 +133,28 @@
         </a>
           </div>
           <p class="btn-dark project-desc">Nuvemshop - Fran - art & decor - Loja E-commerce</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/zurc-tray.png" alt="Project" />
+          </a>
+          <div class="link-projects">
+            <a
+            href="videos/zurc_desktop.mp4"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Vídeo do Site Desktop
+          </a>
+          <a
+          href="videos/zurc_mobile.mp4"
+          target="_blank"
+          class="btn-light"
+        >
+          <i class="fas fa-eye"></i> Vídeo do Site Mobile
+        </a>
+          </div>
+          <p class="btn-dark project-desc">Tray - Zurc - Loja E-commerce</p>
         </div>
         <div class="item">
           <a href="#">
