pagina about.html atualizada

--- a/about.html
+++ b/about.html
@@ -65,19 +65,23 @@
         <div class="bio">
           <p>Olá, meu nome é Guilherme Ramos Oliveira.</p>
           <p>
-            Tenho interesse em Desenvolvimento Web em Ruby on Rails e
-            React-Redux e desenvolvimento Mobile em React Native. <br />Outras
-            áreas de interesse em TI: Computação Gráfica, Visualização de Dados,
+            Tenho interesse em Desenvolvimento Web Front-end. <br />Outras
+            áreas de interesse em TI: Segurança da Informação, Computação Gráfica, Visualização de Dados,
             Bancos de Dados.
           </p>
           <p>
-            Experiência em programação:
-            <em>C, C++, Java, Ruby, Python, Javascript.</em>
+            Experiência:
           </p>
+          <p>Admake - Agência de E-commerce e Marketing Digital: Outubro de 2019 - Dezembro de 2020<br />
+            <em>Desenvolvimento de Layouts para E-commerce</em>
+            <em>HTML, CSS, Javascript</em>
+          </p>
+          
           <p>
-            Graduando em Gestão Empresarial - Fatec, com previsão de formação
-            para Dezembro de 2019. <br />Graduação em Ciências de Computação -
-            USP São Carlos - 2013-2016 - Incompleto.
+            Graduado em Gestão Empresarial - Fatec Marília - 2017-2019. <br />
+            Especialização em Segurança da Informação - Senac - Previsão de Término em meados de 2021.<br />
+            Graduando em Engenharia da Computação - Univesp - Previsão de Término em 2024.<br />
+            Graduação em Ciências de Computação - USP São Carlos - 2013-2016 - Incompleto.
           </p>
         </div>
       </div>
