adicionado breaking bad cast site em work.html

--- a/work.html
+++ b/work.html
@@ -75,6 +75,19 @@
         </div>
         <div class="item">
           <a href="#">
+            <img src="img/projects/breaking-bad-cast.png" alt="Project" />
+          </a>
+          <a
+            href="https://guilherme-breakingbadcast.netlify.app/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark project-desc">Componentes React, React Hooks</p>
+        </div>
+        <div class="item">
+          <a href="#">
             <img src="img/projects/decore-persianas-ny.png" alt="Project" />
           </a>
           <a
