Alteracao work tags para jobs

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
+            <a href="jobs.html" class="nav-link">
               Portfólio
             </a>
           </li>
@@ -88,7 +88,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy; 2020
+      Copyright &copy; 2022
     </footer>
 
     <script src="js/main.js"></script>
