--- a/jobs.html
+++ b/jobs.html
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="nav-item current">
-            <a href="work.html" class="nav-link">
+            <a href="jobs.html" class="nav-link">
               Meu Portfólio
             </a>
           </li>
@@ -51,7 +51,7 @@
       </nav>
     </header>
 
-    <main id="work">
+    <main id="jobs">
       <h1 class="lg-heading">
         Meus
         <span class="text-secondary">Projetos</span>
@@ -241,7 +241,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy; 2020
+      Copyright &copy; 2022
     </footer>
 
     <script src="js/main.js"></script>
