--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="work.html" class="nav-link">
+            <a href="jobs.html" class="nav-link">
               Portfólio
             </a>
           </li>
