Alteracao na pagina about

--- a/about.html
+++ b/about.html
@@ -78,9 +78,9 @@
           </p>
           
           <p>
-            Graduado em Gestão Empresarial - Fatec Marília - 2017-2019. <br />
-            Especialização em Segurança da Informação - Senac - Previsão de Término em meados de 2021.<br />
-            Graduando em Engenharia da Computação - Univesp - Previsão de Término em 2024.<br />
+            Especialização em Segurança da Informação - Senac - Concluído - 2020-2021.<br />
+            Graduado em Gestão Empresarial - Fatec Marília - Concluído - 2017-2019. <br />
+            Graduando em Engenharia da Computação - Univesp - 2020-2024 - Previsão de Término em 2024.<br />
             Graduação em Ciências de Computação - USP São Carlos - 2013-2016 - Incompleto.
           </p>
         </div>
