Segunda alteracao na pagina about

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="bio">
           <p>Olá, meu nome é Guilherme Ramos Oliveira.</p>
           <p>
-            Tenho interesse em Desenvolvimento Web Front-end. <br />Outras
+            Tenho interesse em Desenvolvimento Web Fullstack.<br />Outras
             áreas de interesse em TI: Segurança da Informação, Computação Gráfica, Visualização de Dados,
             Bancos de Dados.
           </p>
@@ -74,7 +74,9 @@
           </p>
           <p>Admake - Agência de E-commerce e Marketing Digital: Outubro de 2019 - Dezembro de 2020<br />
             <em>Desenvolvimento de Layouts para E-commerce</em>
-            <em>HTML, CSS, Javascript</em>
+            <em>HTML, CSS e Sass, Javascript - Plataformas Nuvemshop, Tray, Loja Integrada</em>
+            <em>Frameworks: Vue, React</em>
+            <em>Testes Unitários com Jest e Mocha</em>
           </p>
           
           <p>
