--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="bio">
           <p>Olá, meu nome é Guilherme Ramos Oliveira.</p>
           <p>
-            Tenho interesse em Desenvolvimento Web Fullstack.<br />Outras
+            Desenvolvimento Web Fullstack.<br />Outras
             áreas de interesse em TI: Segurança da Informação, Computação Gráfica, Visualização de Dados,
             Bancos de Dados.
           </p>
