--- a/jobs.html
+++ b/jobs.html
@@ -114,6 +114,19 @@
         </div>
         <div class="item">
           <a href="#">
+            <img src="img/projects/project-slider-puzzle-vue.png" alt="Project" />
+          </a>
+          <a
+            href="https://guilherme-slider-puzzle-vue.netlify.app/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark project-desc">Quebra Cabeça em Vue</p>
+        </div>
+        <div class="item">
+          <a href="#">
             <img src="img/projects/bix-fashion-kids.png" alt="Project" />
           </a>
           <a
