--- a/jobs.html
+++ b/jobs.html
@@ -75,6 +75,19 @@
         </div>
         <div class="item">
           <a href="#">
+            <img src="img/projects/project-covid-tracker.png" alt="Project" />
+          </a>
+          <a
+            href="https://guilherme-covidtracker.netlify.app/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Projeto
+          </a>
+          <p class="btn-dark project-desc">Rastreador de Casos de Covid - Vue e Tailwind</p>
+        </div>
+        <div class="item">
+          <a href="#">
             <img src="img/projects/breaking-bad-cast.png" alt="Project" />
           </a>
           <a
