--- a/about.html
+++ b/about.html
@@ -80,17 +80,20 @@
           </p>
           
           <p>
-            Especialização em Segurança da Informação - Senac - Concluído - 2020-2021.<br />
-            Graduado em Gestão Empresarial - Fatec Marília - Concluído - 2017-2019. <br />
+            Especialização em Segurança da Informação - Senac - 2020-2021.<br />
             Graduando em Engenharia da Computação - Univesp - 2020-2024 - Previsão de Término em 2024.<br />
-            Graduação em Ciências de Computação - USP São Carlos - 2013-2016 - Incompleto.
+            Especialização em Engenharia Eletrônica e Robótica - Uninter - 2023-2024.<br />
+            Especialização em Ciência de Dados e Inteligência Artificial - Uninter - 2024.<br />
+            Bacharelado em Tecnologia da Informação - Univesp - 2020-2022.<br />
+            Tecnólogo em Gestão Empresarial - Fatec Marília - 2017-2019.<br /><br />
+            ... Security, Programming, ML, Data Science, Automation ...
           </p>
         </div>
       </div>
     </main>
 
     <footer id="main-footer">
-      Copyright &copy; 2022
+      Copyright &copy; 2024
     </footer>
 
     <script src="js/main.js"></script>
