--- a/about.html
+++ b/about.html
@@ -65,9 +65,7 @@
         <div class="bio">
           <p>Olá, meu nome é Guilherme Ramos Oliveira.</p>
           <p>
-            Desenvolvimento Web Fullstack.<br />Outras
-            áreas de interesse em TI: Segurança da Informação, Computação Gráfica, Visualização de Dados,
-            Bancos de Dados.
+            Desenvolvimento Web Fullstack.<br />
           </p>
           <p>
             Experiência:
