--- a/about.html
+++ b/about.html
@@ -65,10 +65,14 @@
         <div class="bio">
           <p>Olá, meu nome é Guilherme Ramos Oliveira.</p>
           <p>
-            Desenvolvimento Web Fullstack.<br />
+            Engenheiro de Computação<br />
           </p>
           <p>
             Experiência:
+          </p>
+          <p>Desenvolvedor Freelancer: Janeiro de 2020 - Dezembro de 2024<br />
+            <em>Desenvolvimento de Layouts para E-commerce</em>
+            <em>HTML, CSS,, Javascript - Plataformas Nuvemshop, Tray, Loja Integrada</em>
           </p>
           <p>Admake - Agência de E-commerce e Marketing Digital: Outubro de 2019 - Dezembro de 2020<br />
             <em>Desenvolvimento de Layouts para E-commerce</em>
@@ -78,11 +82,12 @@
           </p>
           
           <p>
-            Especialização em Segurança da Informação - Senac - 2020-2021.<br />
-            Graduando em Engenharia da Computação - Univesp - 2020-2024 - Previsão de Término em 2024.<br />
+            Engenheiro de Computação - Univesp - 2020-2024.<br />
+            Bacharel em Tecnologia da Informação - Univesp - 2020-2022.<br />
+            Cursando Especialização em Direito Digital e Proteção de Dados - Gran Faculdade - 2024-2025.<br />
             Especialização em Engenharia Eletrônica e Robótica - Uninter - 2023-2024.<br />
             Especialização em Ciência de Dados e Inteligência Artificial - Uninter - 2024.<br />
-            Bacharelado em Tecnologia da Informação - Univesp - 2020-2022.<br />
+            Especialização em Segurança da Informação - Senac - 2020-2021.<br />
             Tecnólogo em Gestão Empresarial - Fatec Marília - 2017-2019.<br /><br />
             ... Security, Programming, ML, Data Science, Automation ...
           </p>
@@ -91,7 +96,7 @@
     </main>
 
     <footer id="main-footer">
-      Copyright &copy; 2024
+      Copyright &copy; 2025
     </footer>
 
     <script src="js/main.js"></script>
