--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <span class="text-secondary">Ramos</span>
       </h1>
       <h2 class="sm-heading">
-        Computer Engineering, Student
+        Computer Engineer, Student
       </h2>
       <div class="icons">
         <!--       <a href="#!">
