--- a/jobs.html
+++ b/jobs.html
@@ -75,6 +75,54 @@
         </div>
         <div class="item">
           <a href="#">
+            <img src="img/projects/zurc-2024.png" alt="Project" />
+          </a>
+          <a
+            href="https://www.zurcstore.com/"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Site
+          </a>
+          <p class="btn-dark project-desc">Zurc Store - 2024</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/zurc-tray.png" alt="Project" />
+          </a>
+          <div class="link-projects">
+            <a
+            href="videos/zurc_desktop.mp4"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Vídeo do Site Desktop
+          </a>
+          <a
+          href="videos/zurc_mobile.mp4"
+          target="_blank"
+          class="btn-light"
+        >
+          <i class="fas fa-eye"></i> Vídeo do Site Mobile
+        </a>
+          </div>
+          <p class="btn-dark project-desc">Tray - Zurc - Loja E-commerce - 2019</p>
+        </div>
+        <div class="item">
+          <a href="#">
+            <img src="img/projects/decore-persianas-ny.png" alt="Project" />
+          </a>
+          <a
+            href="https://www.decorecompapel.com.br/persianas-new-york"
+            target="_blank"
+            class="btn-light"
+          >
+            <i class="fas fa-eye"></i> Link para o Site
+          </a>
+          <p class="btn-dark project-desc">VTEX - Persianas New York - Página Institucional</p>
+        </div>
+        <div class="item">
+          <a href="#">
             <img src="img/projects/project-covid-tracker.png" alt="Project" />
           </a>
           <a
@@ -98,19 +146,6 @@
             <i class="fas fa-eye"></i> Link para o Projeto
           </a>
           <p class="btn-dark project-desc">Componentes React, React Hooks</p>
-        </div>
-        <div class="item">
-          <a href="#">
-            <img src="img/projects/decore-persianas-ny.png" alt="Project" />
-          </a>
-          <a
-            href="https://www.decorecompapel.com.br/persianas-new-york"
-            target="_blank"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Link para o Site
-          </a>
-          <p class="btn-dark project-desc">VTEX - Persianas New York - Página Institucional</p>
         </div>
         <div class="item">
           <a href="#">
@@ -140,19 +175,6 @@
         </div>
         <div class="item">
           <a href="#">
-            <img src="img/projects/bix-fashion-kids.png" alt="Project" />
-          </a>
-          <a
-            href="https://www.bixfashionkids.com.br/"
-            target="_blank"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Link para o Site
-          </a>
-          <p class="btn-dark project-desc">Nuvemshop - Bix Fashion Kids - Loja E-commerce</p>
-        </div>
-        <div class="item">
-          <a href="#">
             <img src="img/projects/fran-nuvemshop.png" alt="Project" />
           </a>
           <div class="link-projects">
@@ -172,28 +194,6 @@
         </a>
           </div>
           <p class="btn-dark project-desc">Nuvemshop - Fran - art & decor - Loja E-commerce</p>
-        </div>
-        <div class="item">
-          <a href="#">
-            <img src="img/projects/zurc-tray.png" alt="Project" />
-          </a>
-          <div class="link-projects">
-            <a
-            href="videos/zurc_desktop.mp4"
-            target="_blank"
-            class="btn-light"
-          >
-            <i class="fas fa-eye"></i> Vídeo do Site Desktop
-          </a>
-          <a
-          href="videos/zurc_mobile.mp4"
-          target="_blank"
-          class="btn-light"
-        >
-          <i class="fas fa-eye"></i> Vídeo do Site Mobile
-        </a>
-          </div>
-          <p class="btn-dark project-desc">Tray - Zurc - Loja E-commerce</p>
         </div>
         <div class="item">
           <a href="#">
